--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Title</title>
+    <title>To-Do</title>
 </head>
 <body>
     <h1>Hello</h1>
 
 <form action="/" method="POST">
-    <label for="name">Message</label>
+    <label for="name">Write ToDo</label>
     <input type="text" id="name" name="fullName"><br><br>
     <input type="submit" value="Submit">
 </form>
